; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_base64.c_buffer_new.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_base64.c_buffer_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_st = type { i32, i64, i64*, i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buffer_new(%struct.buffer_st* %0) #0 {
  %2 = alloca %struct.buffer_st*, align 8
  store %struct.buffer_st* %0, %struct.buffer_st** %2, align 8
  %3 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %4 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %3, i32 0, i32 0
  store i32 512, i32* %4, align 8
  %5 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %6 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = sext i32 %7 to i64
  %9 = mul i64 1, %8
  %10 = trunc i64 %9 to i32
  %11 = call i64* @emalloc(i32 %10)
  %12 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %13 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %12, i32 0, i32 2
  store i64* %11, i64** %13, align 8
  %14 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %15 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %14, i32 0, i32 2
  %16 = load i64*, i64** %15, align 8
  %17 = getelementptr inbounds i64, i64* %16, i64 0
  store i64 0, i64* %17, align 8
  %18 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %19 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %18, i32 0, i32 2
  %20 = load i64*, i64** %19, align 8
  %21 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %22 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %21, i32 0, i32 3
  store i64* %20, i64** %22, align 8
  %23 = load %struct.buffer_st*, %struct.buffer_st** %2, align 8
  %24 = getelementptr inbounds %struct.buffer_st, %struct.buffer_st* %23, i32 0, i32 1
  store i64 0, i64* %24, align 8
  ret void
}

declare dso_local i64* @emalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
